--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "devDependencies": {
     "eslint": "7.31.0",
     "eslint-config-htmlacademy": "4.0.2",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "webpack": "4.44.2",
+    "webpack-cli": "3.3.12"
   },
   "engines": {
     "node": "12"
