--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   },
   "engines": {
     "node": "12"
+  },
+  "dependencies": {
+    "dayjs": "1.10.6",
+    "webpack-dev-server": "3.11.0"
   }
 }
